ecmascript/parser/tests/test262-error-references/fail/deb0fe0c1e3822f2.js.stderr
error: Unexpected token Some(DotDotDot)
 --> $DIR/tests/test262-parser/fail/deb0fe0c1e3822f2.js:1:7
  |
1 | f(... ... a)
  |       ^^^

